--- a/src/app/pagina/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/pagina/inicio-sesion/inicio-sesion.component.html
@@ -2,6 +2,7 @@
 <hr>
 
 <body> 
+    <div class="centro "> 
 <form class="form">
     <p class="form-title">Iniciar sesion en tu cuenta</p>
     <div class="input-container">
@@ -20,4 +21,6 @@
         <button routerLink="/registrarse">Registrarse</button>
     </p>
 </form>
+</div>
+
 </body>
