--- a/src/app/pagina/producto/producto.component.html
+++ b/src/app/pagina/producto/producto.component.html
@@ -45,16 +45,16 @@
             <p class="card-text">${{producto.precio}}</p>
 
             <!--BOTONES-->
-           <button class="neu-button"(click)="agregarAlcarrito(producto)"> <svg xmlns="http://www.w3.org/2000/svg" width="16"
-                  height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
-                  <path
-                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                </svg>
-              </button>
+            <button class="neu-button" (click)="agregarAlcarrito(producto)"> <svg xmlns="http://www.w3.org/2000/svg"
+                width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                <path
+                  d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
+              </svg>
+            </button>
 
 
-            <button class="neu-button" (click)=" agregarr(producto)"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                fill="currentColor" class="bi bi-bag-heart" viewBox="0 0 16 16">
+            <button class="neu-button" (click)=" agregarr(producto)"> <svg xmlns="http://www.w3.org/2000/svg" width="16"
+                height="16" fill="currentColor" class="bi bi-bag-heart" viewBox="0 0 16 16">
                 <path fill-rule="evenodd"
                   d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0M14 14V5H2v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1M8 7.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132" />
               </svg> </button>
@@ -64,5 +64,65 @@
       </div>
     </div>
   </div>
+
+</div>
+
+<div class="filtros">
+  <div class="row mb-3">
+    <div class="col-md-3">
+      <label>Categoria:</label>
+      <select class="form-select" [(ngMolde)]="selectCategory" name="categoria">
+        <option value=""> Todas</option>
+        <option *ngFor="let categoria of categories" value="categoria" {{categoria}}></option>
+      </select>
+    </div>
+
+    <div class="col-md-3">
+      <label>Categoria:</label>
+      <select class="form-select" [(ngMolde)]="selectBrand" name="marca">
+        <option value=""> </option>
+        <option *ngFor="let categoria of categories" value="marca" {{marca}}></option>
+      </select>
+    </div>
+
+    <div class="col-md-2">
+      <label>Precio min:</label>
+      <input type="number" class="form-control" [(ngModel)]="minprecio " name="minprecio">
+    </div>
+
+    <div class="col-md-2">
+      <label>Precio max:</label>
+      <input type="number" class="form-control" [(ngModel)]="maxprecio " name="maxprecio">
+    </div>
+
+    <div class="col-md-2 d-flex aling-items-end">
+      <button class="btn btn-secondary w-100" (click)="resetFilters()">
+        <div class="button top">Limpiar </div>
+
+      </button>
+    </div>
+
+  </div>
+</div>
+
+<div class="card-contrainer">
+  <ng-container *ngIf="filteredProducts && filteredProducts.length">
+    <ng-container *ngFor="let producto of filteredProducts">
+      <div *ngIf="producto.disponibilidad" class="card">
+        <img [src]="producto.imagen" alt="{{producto.nombre}}" class="product-image">
+        <h2>{{producto.nombre}}</h2>
+        <p>Precio: {{producto.precio}}</p>
+        <p>Cantidad: {{producto.cantidad}}</p>
+        <p>Marca: {{producto.marca}}</p>
+
+        <i class="bi bi-hand-thumbs-up"></i>
+        <button type="button" class="btn btn-outline-primary" (click)="agregarAlcarrito()"> Agregar al carrito</button>
+        <button type="button" class="btn btn-outline-primary" (click)="agregarr()"> Agregar a favoritos</button>
+      </div>
+    </ng-container>
+  </ng-container>
+<div *ngIf="filteredProducts.length===0" class="text-muted">
+  No se encontraron productos que coincidan con los filtros.
+</div>
 
 </div>
