--- a/src/app/pagina/registrarse/registrarse.component.html
+++ b/src/app/pagina/registrarse/registrarse.component.html
@@ -1,34 +1,39 @@
-<strong> <header>Registrarse</header></strong>
 
 <form class="form">
-    <header> Registrarse </header>
-    <p class="message">Registratate ahora y ten acceso por completo a nuestra pagina. </p>
-    <div class="flex">
+    <div class="container">
+         <p class="title">Registrarse</p>
+        <p class="message">Registratate ahora y ten acceso por completo a nuestra pagina. </p>
+        <div class="flex">
+            <label>
+                <input required="" placeholder="" type="text" class="input">
+                <span>Primer nombre</span>
+            </label>
+
+            <label>
+                <input required="" placeholder="" type="text" class="input">
+                <span>Segundo nombre</span>
+            </label>
+        </div>
+
         <label>
-            <input required="" placeholder="" type="text" class="input">
-            <span>Primer nombre</span>
+            <input required="" placeholder="" type="email" class="input">
+            <span>Email</span>
         </label>
 
         <label>
-            <input required="" placeholder="" type="text" class="input">
-            <span>Segundo nombre</span>
+            <input required="" placeholder="" type="Contraseña" class="input">
+            <span>Contraseña</span>
         </label>
+        <label>
+            <input required="" placeholder="" type="password" class="input">
+            <span>Confirmar contraseña</span>
+        </label>
+        <br> 
+        <button class="neu-button">Registrarme</button>
+        <p class="signin">¿Ya tienes una cuenta?
+            <button routerLink="/inicio-sesion">Iniciar sesion</button>
+        </p>
+
+
     </div>
-
-    <label>
-        <input required="" placeholder="" type="email" class="input">
-        <span>Email</span>
-    </label>
-
-    <label>
-        <input required="" placeholder="" type="Contraseña" class="input">
-        <span>Contraseña</span>
-    </label>
-    <label>
-        <input required="" placeholder="" type="password" class="input">
-        <span>Confirmar contraseña</span>
-    </label>
-    <button class="neu-button">Registrarme</button>
-    <p class="signin">¿Ya tienes una cuenta? 
-        <button routerLink="/inicio-sesion">Iniciar sesion</button> </p>
 </form>
