--- a/src/app/pagina/inicio-sesion/inicio-sesion.component.css
+++ b/src/app/pagina/inicio-sesion/inicio-sesion.component.css
@@ -6,19 +6,21 @@
  font-family: 'Anton', sans-serif;
  }
 
+ .centro{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+ }
+
 /*formulario*/
 .form {
-  background-color: #f3efef;
+  background-color: #fff;
   display: block;
   padding: 1rem;
-  text-align: center;
   max-width: 350px;
   border-radius: 0.5rem;
-  box-shadow: 0 4px 8px rgb(5, 5, 5);
-  /*posicionar en el centro*/
-  justify-content: left;
-  
- 
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
 .form-title {
@@ -69,6 +71,7 @@
   padding: 10px 20px;
   transition: all 0.2s ease-in-out;
   border: 2px solid rgb(206, 206, 206);
+  
 }
 
 .neu-button:hover {
