--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,10 +1,10 @@
 <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+      <li class="nav-item"><a routerLink="/inicio" class="nav-link px-2 text-body-secondary">Inicio</a></li>
+      <li class="nav-item"><a routerLink="/producto" class="nav-link px-2 text-body-secondary">Fear of god</a></li>
+      <li class="nav-item"><a routerLink="/ofertas"  class="nav-link px-2 text-body-secondary">Essentials</a></li>
+      <li class="nav-item"><a routerLink="/contacto" class="nav-link px-2 text-body-secondary">Contactos </a></li>
+      <li class="nav-item"><a routerLink="/nosotros" class="nav-link px-2 text-body-secondary">Nosotros </a></li>
     </ul>
     <p class="text-center text-body-secondary">© 2025 Company, Inc</p>
   </footer>
