diseño de nosotros

--- a/src/app/pagina/nosotros/nosotros.component.css
+++ b/src/app/pagina/nosotros/nosotros.component.css
@@ -101,9 +101,10 @@ header h1 {
 }
 
 .middle-text {
-  max-width: 250px;
-  text-align: justify;
+  max-width: 300px;
+  text-align: center;
   font-size: 14px;
+
 }
 
 
