--- a/src/app/pagina/nosotros/nosotros.component.html
+++ b/src/app/pagina/nosotros/nosotros.component.html
@@ -14,50 +14,52 @@
           <br><br>
           <hr>
 
-          <header>FEAR OF GOD CELEBRATES THE DIGNITY OF DESIGN</header>
+          <header>FEAR OF GOD LA INDUSTRIA CON UN ENFOQUE EN EL STREETWEAR DE LUJO</header>
 
           <div class="text">
-               Este año, Fear of God encuentra una profunda alineación con la exposición del Instituto de Vestuario <br>
-               de Primavera de 2025 del Museo Metropolitano de Arte, “Superfine: Tailoring Black Style”,<br> una
-               exploración y celebración de la expresión negra a través de la excelencia sartorial.
-               <br> Fotografía de Roza Wiktoria Tyborowska.
+              Fear of God fue fundada por Jerry Lorenzo en 2013 en Los Ángeles, según New Era Cap México.<br>
+               Lorenzo, con experiencia en marketing deportivo y sin formación formal en diseño de moda, 
+               <br>buscaba reflejarar su estilo personal.
+              <br><br>
+              La marca, que se distingue por su estética distintiva y referencias a la cultura urbana <br> 
+              y la alta costura, nació de la necesidad de Lorenzo de crear prendas que <br> no encontraba en el mercado. 
           </div>
           <hr>
+          <br><br>
 
 
           <section class="intro">
                <div class="intro-img">
-                    <img src="img1.jpg" alt="Colección 8">
+                    <img src="https://journeymagonline.com/wp-content/uploads/2024/02/WSJ-Lorenzo-Image.jpg" alt="Colección 8">
                </div>
                <div class="intro-text">
-                    <h2>COLECCIÓN 8</h2>
-                    <p>Fear of God presenta la llegada de la Colección 8, que debutó la primavera pasada en el primer
-                         desfile de la casa en el Hollywood Bowl.</p>
+                    <h2>RECONOCIMIENTO</h2>
+                    <p>La marca ganó reconocimiento rápidamente, por las fiestas JL Night, que atraían a figuras 
+                         de la música y el deporte. Colaboró con Kanye West en la gira Yeezus, en la primera 
+                         temporada de Yeezy y Purpose World Tour de Justin Bieber lo que impulsó aún más la visibilidad de Fear of God. </p>
                </div>
           </section>
 
           <section class="gallery">
-               <img src="img2.jpg" alt="Look 1">
-               <img src="img3.jpg" alt="Look 2">
+               <img src="https://cdn.accentuate.io/94146330685/1731268191650/Essentials_HO24_Look_35_0062-LB-39-copy.jpg?v=1731268191650" alt="Look 1">
+               <img src="https://cdn.accentuate.io/94146330685/1731095445392/Essentials_HO24_Look_37_0087_V1-LB-45.jpg?v=1731212593112" alt="Look 2">
           </section>
 
           <section class="description">
-               <p>
-                    La colección 8 encarna y refuerza la perspectiva de Fear of God sobre el lujo estadounidense a
-                    través de prendas atemporales y elegantes.
-               </p>
+               <p>ATHLETICS</p>
           </section>
 
           <section class="triple-gallery">
-               <img src="img4.jpg" alt="Look 3">
+               <img src="https://fearofgod.com/cdn/shop/files/20241104_NK_FearOfGod_IV_S01_100_copy.jpg?v=1733356846&width=1440" alt="Look 3">
                <div class="middle-text">
                     <p>
-                         Derivada de una sutil mezcla de influencias que abrazan las experiencias de la perspectiva y el
-                         viaje individual, la oferta extiende el lenguaje de diseño de la casa a través de disposiciones
-                         textiles y proporciones arquitectónicas.
+                     Incluso antes de la primera colaboración entre Nike y Fear Of God en 2018, el mundo del deporte era una gran fuente 
+                     de inspiración para Lorenzo, Aunque las siluetas de Fear Of God x Nike son algunas de las más emblemáticas de la industria
+                    codeándose así con figuras como Michael Jordan, Virgil Abloh y Kanye. Los Air Fear Of God 1 son en parte unos tenis altos
+                     y en parte unos zapatos de basquetbol
                     </p>
                </div>
-               <img src="img5.jpg" alt="Look 4">
+               <img src="https://fearofgod.com/cdn/shop/files/03-4-5.jpg?v=1738644903&width=1440" alt="Look 4">
           </section>
 
 
